--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@ai-sdk/react": "^3.0.3",
     "@radix-ui/react-slot": "^1.2.4",
     "ai": "^6.0.3",
+    "better-auth": "^1.4.15",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.24.5",
